--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,18 +4,17 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="11" />
+    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="15" />
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION"/>
 
     <application
         android:name=".AzyotCheckApplication"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.Holo.Light">
+        android:theme="@style/Theme.Sherlock.Light.DarkActionBar">
         <activity
             android:name=".StartPageActivity"
             android:label="@string/app_name"
@@ -32,7 +31,7 @@
             </intent-filter>
         </activity>
         <activity android:label="@string/search_result" android:name=".SearchResultActivity"></activity>
-        <activity android:name=".CheckinPageActivity"></activity>
+        <activity android:name=".CheckinPageActivity" android:label="@string/checkin"></activity>
     </application>
 
 </manifest>
