--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,37 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="net.azyobuzi.azyotcheck"
-    android:versionCode="2"
-    android:versionName="1.1" >
+    android:versionCode="3"
+    android:versionName="2.0" >
 
-    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="15" />
+    <uses-sdk
+        android:minSdkVersion="8"
+        android:targetSdkVersion="14" />
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:name=".AzyotCheckApplication"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.Sherlock.Light.DarkActionBar">
+        android:theme="@style/Theme.Sherlock.Light" >
         <activity
-            android:name=".StartPageActivity"
-            android:label="@string/app_name"
-            android:launchMode="singleTask">
+            android:name=".MainActivity"
+            android:label="@string/title_activity_main"
+            android:launchMode="singleTask" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".AuthorizeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                <data android:scheme="net.azyobuzi.azyotcheck" android:host="callback" />
+
+                <data
+                    android:host="callback"
+                    android:scheme="net.azyobuzi.azyotcheck" />
             </intent-filter>
         </activity>
-        <activity android:label="@string/search_result" android:name=".SearchResultActivity"></activity>
-        <activity android:name=".CheckinPageActivity" android:label="@string/checkin"></activity>
     </application>
 
 </manifest>
